feat: common包下代码优化 详细描述: